fixing -analyzer tests, all mechanical up to now